--- a/build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle
+++ b/build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle
@@ -13,7 +13,7 @@ import java.util.concurrent.TimeUnit
  * In order for the gist to be created successfully, you must specify the Gradle property `gistToken` where
  * the value is a Github access token that has gist permission on the given Github repo.
  *
- * See https://docs.github.com/en/free-pro-team@latest/rest/reference/gists#create-a-gist for reference.
+ * See https://docs.github.com/en/rest/gists/gists#create-a-gist for reference.
  */
 
 def buildScanApi = project.extensions.findByName('buildScan')
