--- a/build-caching-maven-samples/protobuf-project/pom.xml
+++ b/build-caching-maven-samples/protobuf-project/pom.xml
@@ -32,6 +32,7 @@
             </goals>
             <configuration>
               <outputDirectory>target/generated-sources/protobuf</outputDirectory>
+              <protocArtifact>com.google.protobuf:protoc:3.17.3</protocArtifact>
             </configuration>
           </execution>
         </executions>
