--- a/build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle
+++ b/build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle
@@ -53,7 +53,7 @@ class Capture {
     }
 
     void captureGitDiffInGist(api) {
-        def hasCredentials = gistTokenProvider.isPresent()
+        def hasCredentials = gistTokenProvider.present
         if (!hasCredentials) {
             logger.warn("User has not set 'gistToken'. Cannot publish gist.")
             return
