--- a/.github/workflows/maven-build-caching-samples-verification.yml
+++ b/.github/workflows/maven-build-caching-samples-verification.yml
@@ -34,12 +34,9 @@ jobs:
             -a "-Dorg.slf4j.simpleLogger.log.gradle.goal.cache=debug -B" \
             -s "https://ge.solutions-team.gradle.com" \
             -f 2>&1 | tee -a /tmp/build.log
+          echo "hasUnknownParams=$(grep "Build caching was not enabled for this goal execution because the following parameters were not handled" /tmp/build.log | wc -l)" >> $GITHUB_OUTPUT
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
       - name: Verify no unmapped mojo parameters
-        if: success() || failure()
-        run: |
-          hasUnknownParams="$(grep 'Build caching was not enabled for this goal execution because the following parameters were not handled' /tmp/build.log | wc -l)"
-          if [[ "$hasUnknownParams" != "0" ]]; then
-            exit 1
-          fi
+        if: (success() || failure()) && steps.build.outputs.hasUnknownParams != '0'
+        run: exit 1
